Fix rendering image placeholders on mobile

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -270,11 +270,12 @@ textarea {
   display: flex !important;
   justify-content: center;
   align-items: center;
-  min-height: 350px;
-  width: 100%;
+
+  &:not(.lazy-load-image-loaded) {
+    @include aspect-ratio(16, 10);
+  }
 
   &.lazy-load-image-loaded {
     background-color: transparent;
-    min-height: auto;
   }
 }
